@@ -1,6 +1,10 @@
+2013-05-10  Xavier Perseguers  <xavier@causal.ch>
+
+	* [TASK] Do not download Sphinx/ReST Tools/PyYAML sources if available locally (relates #48094)
+
 2013-05-09  Xavier Perseguers  <xavier@causal.ch>
 
-	* [WIP] #48094: Allow sphinx and ReST tools to be manually updated
+	* [TASK] Refactor import process (relates #48094)
 
 2013-04-29  Xavier Perseguers  <xavier@causal.ch>
 
